--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ rocket = { version = "0.5.0-rc.2", features = ["json"]  }
 serde = "1.0"
 serde_json = "1.0"
 mongodb = "2.3"
+base64= "0.13"
+reqwest = { version = "0.11", features = ["json"] }
